[package]
name = "with-baby-dispatcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
h3ron-h3-sys = "*"
dotenv = "*"
kafka = "*"
r2d2 = "*"
rdkafka = { version = "*", features = ["cmake-build"] }